[metadata]
description-file = README.rst

[aliases]
test = pytest

[options]
setup_requires = setuptools_scm

[flake8]
exclude = __init__.py,pyproject.toml,.eggs,doc
ignore =
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
