[metadata]
name = xrft
description = Discrete Fourier Transform with xarray
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/xgcm/xrft
author = xrft Developers
author_email = takaya.uchida@univ-grenoble-alpes.fr
license = MIT
license_file = LICENSE
version = attr: xrft._version.__version__
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: MacOS X
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
project_urls = 
    Documentation = https://xrft.readthedocs.io/en/latest/
    Source = https://github.com/xgcm/xrft
    Tracker = https://github.com/xgcm/xrft/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires = 
    xarray
    dask
    numpy
    pandas
    scipy
python_requires = >=3.6
setup_requires = 
    setuptools_scm
    pytest-runner
extra_requires = 
    cftime
    numpy_groupies

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[options.entry_points]
console_scripts =
    xrft = xrft.__main__:main

[options.extras_require]
test =
    pytest >= 6.2.2
    pycodestyle
    pytest-cov
all =
    %(test)s

