[metadata]
name = xrft
description = Discrete Fourier Transform with xarray
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/xgcm/xrft
author = xrft Developers
author_email = takaya.uchida@univ-grenoble-alpes.fr
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
project_urls = 
    Documentation = https://xrft.readthedocs.io/en/latest/
    Source = https://github.com/xgcm/xrft
    Tracker = https://github.com/xgcm/xrft/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires = 
    xarray
    dask
    numpy
    pandas
    scipy
    setuptools
python_requires = >=3.6
setup_requires = 
    setuptools_scm
    pytest-runner
extra_requires = 
    cftime
    numpy_groupies

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[options.entry_points]
console_scripts =
    xrft = xrft.__main__:main

[options.extras_require]
test =
    pytest >= 6.2.2
    pycodestyle
    pytest-cov
all =
    %(test)s

[flake8]
exclude = __init__.py,pyproject.toml,.eggs,doc
ignore =
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503

[isort]
known_first_party=xrft
known_third_party=dask,numpy,pandas,pytest,pytest_lazyfixture,setuptools,sphinx_book_theme,xarray,zarr
